# bartlby-core

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  UPGRADE_RIGHTS_TO_DB  autogen.sh  bartlby.cfg.cmake  bartlby.cfg.in  bartlby.startup.cmake  bartlby.startup.in  checkinstall.sh  configure  configure.ac  mysql.shema  nsca-2.7.1-for-bartlby.patch  post_compile.sh  postinstall-pak.in  push_coverity.sh  update_clibs.sh
bartlby-agent/: Makefile  Makefile.conf.in  agent.c  agent_v2.c  bartlby.cfg.in  bartlby_agent.plist  cmd.c  config.c  configure  global.c
bartlby-chrome/: btl-event.js  btl-event.js.bak  manifest.json  options.html.bak  options.js.bak  popup.js
bartlby-core/: Makefile.conf.in  bartlby.cfg.in  description-pak  mysql.shema  nsca-2.7.1-for-bartlby.patch  postinstall-pak.in  preinstall-pak.in
bartlby-core/include/: bartlby.h
bartlby-core/perf/: bartlby_if  bartlby_load  bartlby_snmp.sh
bartlby-core/src/: ack.c  bartlby.c  check.c  check_active.c  check_active_v2.c  check_group.c  check_local.c  check_nrpe.c  config.c  daemon.c  downtime.c  event.c  ext.c  global.c  perf.c  replication.c  sched.c  shm.c  snmp.c  trigger.c
bartlby-core/trigger/: jabber.sh  sms.sh
bartlby-docs/: INSTALL  MYSQL.shema.sql
bartlby-extensions/: Makefile  README_EXTLOGGER.txt  README_WATCHDOG.txt  description-pak  distributive.c  extlogger.c  helloworld.c
bartlby-php/: ChangeLog  INSTALL  bartlby.c  php_bartlby.h
bartlby-php/tests/: 001.phpt
bartlby-plugins/: bartlby.funcs  bartlby_disk.sh  bartlby_files_in_dir  bartlby_if  bartlby_load  bartlby_swap.sh  configure.ac  postinstall-pak.in
bartlby-ui/: api.phps  bartlby-ui.class.php  bartlby.php  bartlby_action.php  bartlbystorage.class.php  check.php  choose_config.php  cli.php  config.php  downtime_list.php  event_queue.php  execv.php  extensions_wrap.php  grpstr.php  index.php  locate_server.php  logview.php  modify_downtime.php  modify_server.php  modify_service.php  modify_worker.php  nav.php  nonav.html  overview.php  package_delete.php  permission_worker.php  print_report.php  report.php  rss.php  server_detail.php  server_list.php  service_detail.php  setup.php  trigger.php  ui-extra.conf  user_list.php  version.php  xajax_dispatcher.php
bartlby-ui/fin/: BARTLBY_NOT_RUNNING  BARTLBY_RIGHT_MISSING  ack_problem  add_downtime  add_worker  delete_server  delete_service1  disable_extension  disable_notify  disable_server  enable_extension  enable_notify_server  install_package
bartlby-ui/flash/: pie.html  pie.swf
bartlby-ui/images/: btl.js
bartlby-ui/js/: btl.js  dom-drag.js
bartlby-ui/pkgs/: default-pkg
bartlby-ui/xajax/: xajax.inc.php  xajaxCompress.php
bartlby-w32/btmon/: installer.nsi  postbuild.bat
branches/bartlby-ui-redesign/: ChangeLog  ack_service.php  add_server.php  add_service.php  bartlby-ui.class.php  bartlby.php  bartlby_action.php  cli.php  create_map.php  delete_downtime.php  delete_service.php  edit_config.php  event_stream.php  install_pkg.php  layout.class.php  modify_server.php  modify_service.php  overview.php  package_create.php  package_delete.php  print_report.php  services.php  version.php  xajax.common.php  xajax_dispatcher.php  xml_api.php
cmake/: CodeCoverage.cmake  findcurl.cmake  findgeneric.cmake  findgit.cmake  findjson.cmake  findlua.cmake  findmysql.cmake  findsnmp.cmake  findssh.cmake  findssl.cmake  installcfg.cmake
debian/: changelog  conffiles  control  copyright  files  postinst  rules
docs/: README.ORCH  README.notification_upstream  README.portier_spooling  UPGRADE_RIGHTS_TO_DB  UPGRADE_TRIGGERS_TO_SHM.php
include/: bartlby.h  bartlby_shm.h  config.h.cmake  config.h.in
perf/: bartlby_files_in_dir  bartlby_generic.sh  bartlby_http  bartlby_if  bartlby_load  bartlby_snmp.sh  bartlby_swap.sh
perf/defaults/: bartlby_load.rrd.xml  bartlby_swap.sh.rrd.xml
sbin/: bartlby_portier_spool_bulk.php  bartlby_submit_trap.php
src/: Makefile  ack.c  bartlby.c  baseline.c  check.c  check_active.c  check_active_v2.c  check_group.c  check_json.c  check_local.c  check_nrpe.c  check_snmp.c  check_ssh.c  compat.c  config.c  daemon.c  downtime.c  event.c  ext.c  global.c  http.c  json.c  lua.c  notification_log.c  orchestra.c  perf.c  portier_base.c  replication.c  sched.c  shm.c  snmp.c  trap.c  trigger.c  trigger_local.c  trigger_lua.c  trigger_smtp.c  trigger_webhooks.c  webhooks.c
src/libs/: Makefile  mysql.c  trap_temp
src/tools/: portier.c  portier_legacy.c  shmt.c
tests/: Makefile  bartlby_test.c  bartlby_test.h  baseline.c  cleanup.c  core.c  downtime.c  global.c  json_sample.c  lua.c  server.c  servergroup.c  service.c  servicegroup.c  test-mysql-realescape.c  traps.c  triggers.c  untested_functions.sh  worker.c
tests/lab/: Makefile  baseline.c  lua_sample.c  sample.lua
travis/: build_check.sh  compile.sh
trigger/: icq.sh  jabber.sh  mail.sh  push.sh  sms.sh
trunk/bartlby-agent/: HOWTO.passive  agent.c  agent_sync.cfg.in  agent_sync.sh  agent_v2.c  config.c  configure.ac  description-pak  global.c  passive_run.sample  postinstall-pak.in
trunk/bartlby-chrome/: manifest.json.bak  options.html  options.js  popup.html  popup.html.bak  popup.js.bak
trunk/bartlby-core/: Makefile  bartlby.startup.in  configure  configure.ac
trunk/bartlby-core/contrib/: bartlby_dump.php
trunk/bartlby-core/include/: bartlby.h
trunk/bartlby-core/perf/: bartlby_files_in_dir  bartlby_http  bartlby_swap.sh
trunk/bartlby-core/perf/defaults/: bartlby_files_in_dir.rrd.xml  bartlby_snmp.sh.rrd.xml
trunk/bartlby-core/src/: ack.c  bartlby.c  check.c  check_active.c  check_active_v2.c  check_group.c  check_local.c  check_nrpe.c  config.c  daemon.c  downtime.c  event.c  ext.c  global.c  perf.c  replication.c  sched.c  shm.c  snmp.c  trigger.c
trunk/bartlby-core/src/libs/: mysql.c
trunk/bartlby-core/src/tools/: portier.c  shmt.c
trunk/bartlby-extensions/: nsc  nsc.c  watchdog.c
trunk/bartlby-php/: CREDITS  Makefile  Makefile.in  bartlby.php  config.m4  description-pak
trunk/bartlby-plugins/: Makefile  Makefile.conf.in  bartlby.funcs  (+14 more)
(+292 files in other folders)
